fixed body overflow x

--- a/src/assets/styles/_override.scss
+++ b/src/assets/styles/_override.scss
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 .swiper-slide {
   a {
     display: block;
